grammar/ObsolescenceParser.py
# Generated from ./Obsolescence.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ObsolescenceParser ( Parser ):

    grammarFileName = "Obsolescence.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "':'", "'('", "'criticality'", "'='", 
                     "','", "'confidence'", "'date'", "')'", "'{'", "'impacts:'", 
                     "'}'", "'->'", "'elements'", "'impact'", "'%'", "'propagation level'", 
                     "'propagation impact loss'", "'expires'", "'rule'", 
                     "'discrepancy'", "'until'", "'every'", "'/'", "'Attribute'", 
                     "'ofClass'", "'Relation'", "'Class'", "'Model'", "'Function'", 
                     "'()'", "'Enumeration'", "'Warning'", "'Error'", "'s'", 
                     "'min'", "'h'", "'d'", "'m'", "'y'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "WS", "ML_COMMENT", "SL_COMMENT", "INT", "ID", "STRING" ]

    RULE_obsolescence = 0
    RULE_obsolescenceDeclaration = 1
    RULE_impact = 2
    RULE_temporalDeclaration = 3
    RULE_internalDeclaration = 4
    RULE_dataDeclaration = 5
    RULE_dateReached = 6
    RULE_dateRecurring = 7
    RULE_dateObsolescence = 8
    RULE_periodObsolescence = 9
    RULE_modelElement = 10
    RULE_attribute = 11
    RULE_relation = 12
    RULE_class = 13
    RULE_modelSet = 14
    RULE_functionSet = 15
    RULE_enumeration = 16
    RULE_criticalityType = 17
    RULE_tUnit = 18

    ruleNames =  [ "obsolescence", "obsolescenceDeclaration", "impact", 
                   "temporalDeclaration", "internalDeclaration", "dataDeclaration", 
                   "dateReached", "dateRecurring", "dateObsolescence", "periodObsolescence", 
                   "modelElement", "attribute", "relation", "class", "modelSet", 
                   "functionSet", "enumeration", "criticalityType", "tUnit" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    WS=40
    ML_COMMENT=41
    SL_COMMENT=42
    INT=43
    ID=44
    STRING=45

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ObsolescenceContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.model = None # ModelSetContext

        def modelSet(self):
            return self.getTypedRuleContext(ObsolescenceParser.ModelSetContext,0)


        def obsolescenceDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ObsolescenceParser.ObsolescenceDeclarationContext)
            else:
                return self.getTypedRuleContext(ObsolescenceParser.ObsolescenceDeclarationContext,i)


        def getRuleIndex(self):
            return ObsolescenceParser.RULE_obsolescence

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterObsolescence" ):
                listener.enterObsolescence(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitObsolescence" ):
                listener.exitObsolescence(self)




    def obsolescence(self):

        localctx = ObsolescenceParser.ObsolescenceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_obsolescence)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 38
            localctx.model = self.modelSet()
            self.state = 39
            self.match(ObsolescenceParser.T__0)
            self.state = 41 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 40
                self.obsolescenceDeclaration()
                self.state = 43 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==44):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ObsolescenceDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.name = None # Token
            self.date = None # DateObsolescenceContext
            self.temporal = None # TemporalDeclarationContext
            self.data = None # DataDeclarationContext
            self.internal = None # InternalDeclarationContext

        def criticalityType(self):
            return self.getTypedRuleContext(ObsolescenceParser.CriticalityTypeContext,0)


        def INT(self):
            return self.getToken(ObsolescenceParser.INT, 0)

        def ID(self):
            return self.getToken(ObsolescenceParser.ID, 0)

        def dateObsolescence(self):
            return self.getTypedRuleContext(ObsolescenceParser.DateObsolescenceContext,0)


        def impact(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ObsolescenceParser.ImpactContext)
            else:
                return self.getTypedRuleContext(ObsolescenceParser.ImpactContext,i)


        def temporalDeclaration(self):
            return self.getTypedRuleContext(ObsolescenceParser.TemporalDeclarationContext,0)


        def dataDeclaration(self):
            return self.getTypedRuleContext(ObsolescenceParser.DataDeclarationContext,0)


        def internalDeclaration(self):
            return self.getTypedRuleContext(ObsolescenceParser.InternalDeclarationContext,0)


        def getRuleIndex(self):
            return ObsolescenceParser.RULE_obsolescenceDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterObsolescenceDeclaration" ):
                listener.enterObsolescenceDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitObsolescenceDeclaration" ):
                listener.exitObsolescenceDeclaration(self)




    def obsolescenceDeclaration(self):

        localctx = ObsolescenceParser.ObsolescenceDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_obsolescenceDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 45
            localctx.name = self.match(ObsolescenceParser.ID)
            self.state = 46
            self.match(ObsolescenceParser.T__1)
            self.state = 47
            self.match(ObsolescenceParser.T__2)
            self.state = 48
            self.match(ObsolescenceParser.T__3)
            self.state = 49
            self.criticalityType()
            self.state = 50
            self.match(ObsolescenceParser.T__4)
            self.state = 51
            self.match(ObsolescenceParser.T__5)
            self.state = 52
            self.match(ObsolescenceParser.T__3)
            self.state = 53
            self.match(ObsolescenceParser.INT)
            self.state = 54
            self.match(ObsolescenceParser.T__4)
            self.state = 55
            self.match(ObsolescenceParser.T__6)
            self.state = 56
            self.match(ObsolescenceParser.T__3)
            self.state = 57
            localctx.date = self.dateObsolescence()
            self.state = 58
            self.match(ObsolescenceParser.T__7)
            self.state = 62
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [18]:
                self.state = 59
                localctx.temporal = self.temporalDeclaration()
                pass
            elif token in [20]:
                self.state = 60
                localctx.data = self.dataDeclaration()
                pass
            elif token in [19]:
                self.state = 61
                localctx.internal = self.internalDeclaration()
                pass
            elif token in [9]:
                pass
            else:
                pass
            self.state = 64
            self.match(ObsolescenceParser.T__8)
            self.state = 65
            self.match(ObsolescenceParser.T__9)
            self.state = 67 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 66
                self.impact()
                self.state = 69 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==12):
                    break

            self.state = 71
            self.match(ObsolescenceParser.T__10)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ImpactContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self, i:int=None):
            if i is None:
                return self.getTokens(ObsolescenceParser.INT)
            else:
                return self.getToken(ObsolescenceParser.INT, i)

        def modelElement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ObsolescenceParser.ModelElementContext)
            else:
                return self.getTypedRuleContext(ObsolescenceParser.ModelElementContext,i)


        def getRuleIndex(self):
            return ObsolescenceParser.RULE_impact

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterImpact" ):
                listener.enterImpact(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitImpact" ):
                listener.exitImpact(self)




    def impact(self):

        localctx = ObsolescenceParser.ImpactContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_impact)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 73
            self.match(ObsolescenceParser.T__11)
            self.state = 74
            self.match(ObsolescenceParser.T__12)
            self.state = 75
            self.match(ObsolescenceParser.T__3)
            self.state = 77 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 76
                self.modelElement()
                self.state = 79 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 3170893824) != 0)):
                    break

            self.state = 81
            self.match(ObsolescenceParser.T__13)
            self.state = 82
            self.match(ObsolescenceParser.T__3)
            self.state = 83
            self.match(ObsolescenceParser.INT)
            self.state = 84
            self.match(ObsolescenceParser.T__14)
            self.state = 85
            self.match(ObsolescenceParser.T__15)
            self.state = 86
            self.match(ObsolescenceParser.T__3)
            self.state = 87
            self.match(ObsolescenceParser.INT)
            self.state = 88
            self.match(ObsolescenceParser.T__16)
            self.state = 89
            self.match(ObsolescenceParser.T__3)
            self.state = 90
            self.match(ObsolescenceParser.INT)
            self.state = 91
            self.match(ObsolescenceParser.T__14)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TemporalDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.fixed = None # DateReachedContext
            self.periodic = None # DateRecurringContext

        def dateReached(self):
            return self.getTypedRuleContext(ObsolescenceParser.DateReachedContext,0)


        def dateRecurring(self):
            return self.getTypedRuleContext(ObsolescenceParser.DateRecurringContext,0)


        def getRuleIndex(self):
            return ObsolescenceParser.RULE_temporalDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTemporalDeclaration" ):
                listener.enterTemporalDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTemporalDeclaration" ):
                listener.exitTemporalDeclaration(self)




    def temporalDeclaration(self):

        localctx = ObsolescenceParser.TemporalDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_temporalDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self.match(ObsolescenceParser.T__17)
            self.state = 94
            self.match(ObsolescenceParser.T__3)
            self.state = 97
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [21]:
                self.state = 95
                localctx.fixed = self.dateReached()
                pass
            elif token in [22]:
                self.state = 96
                localctx.periodic = self.dateRecurring()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InternalDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(ObsolescenceParser.STRING, 0)

        def getRuleIndex(self):
            return ObsolescenceParser.RULE_internalDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInternalDeclaration" ):
                listener.enterInternalDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInternalDeclaration" ):
                listener.exitInternalDeclaration(self)




    def internalDeclaration(self):

        localctx = ObsolescenceParser.InternalDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_internalDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self.match(ObsolescenceParser.T__18)
            self.state = 100
            self.match(ObsolescenceParser.T__3)
            self.state = 101
            self.match(ObsolescenceParser.STRING)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DataDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(ObsolescenceParser.INT, 0)

        def getRuleIndex(self):
            return ObsolescenceParser.RULE_dataDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDataDeclaration" ):
                listener.enterDataDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDataDeclaration" ):
                listener.exitDataDeclaration(self)




    def dataDeclaration(self):

        localctx = ObsolescenceParser.DataDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_dataDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            self.match(ObsolescenceParser.T__19)
            self.state = 104
            self.match(ObsolescenceParser.T__3)
            self.state = 105
            self.match(ObsolescenceParser.INT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DateReachedContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.until = None # DateObsolescenceContext

        def dateObsolescence(self):
            return self.getTypedRuleContext(ObsolescenceParser.DateObsolescenceContext,0)


        def getRuleIndex(self):
            return ObsolescenceParser.RULE_dateReached

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDateReached" ):
                listener.enterDateReached(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDateReached" ):
                listener.exitDateReached(self)




    def dateReached(self):

        localctx = ObsolescenceParser.DateReachedContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_dateReached)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self.match(ObsolescenceParser.T__20)
            self.state = 108
            localctx.until = self.dateObsolescence()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DateRecurringContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.every = None # PeriodObsolescenceContext

        def periodObsolescence(self):
            return self.getTypedRuleContext(ObsolescenceParser.PeriodObsolescenceContext,0)


        def getRuleIndex(self):
            return ObsolescenceParser.RULE_dateRecurring

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDateRecurring" ):
                listener.enterDateRecurring(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDateRecurring" ):
                listener.exitDateRecurring(self)




    def dateRecurring(self):

        localctx = ObsolescenceParser.DateRecurringContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_dateRecurring)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self.match(ObsolescenceParser.T__21)
            self.state = 111
            localctx.every = self.periodObsolescence()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DateObsolescenceContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self, i:int=None):
            if i is None:
                return self.getTokens(ObsolescenceParser.INT)
            else:
                return self.getToken(ObsolescenceParser.INT, i)

        def getRuleIndex(self):
            return ObsolescenceParser.RULE_dateObsolescence

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDateObsolescence" ):
                listener.enterDateObsolescence(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDateObsolescence" ):
                listener.exitDateObsolescence(self)




    def dateObsolescence(self):

        localctx = ObsolescenceParser.DateObsolescenceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_dateObsolescence)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self.match(ObsolescenceParser.INT)
            self.state = 114
            self.match(ObsolescenceParser.T__22)
            self.state = 115
            self.match(ObsolescenceParser.INT)
            self.state = 116
            self.match(ObsolescenceParser.T__22)
            self.state = 117
            self.match(ObsolescenceParser.INT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PeriodObsolescenceContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(ObsolescenceParser.INT, 0)

        def tUnit(self):
            return self.getTypedRuleContext(ObsolescenceParser.TUnitContext,0)


        def getRuleIndex(self):
            return ObsolescenceParser.RULE_periodObsolescence

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPeriodObsolescence" ):
                listener.enterPeriodObsolescence(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPeriodObsolescence" ):
                listener.exitPeriodObsolescence(self)




    def periodObsolescence(self):

        localctx = ObsolescenceParser.PeriodObsolescenceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_periodObsolescence)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.match(ObsolescenceParser.INT)
            self.state = 120
            self.tUnit()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ModelElementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attribute(self):
            return self.getTypedRuleContext(ObsolescenceParser.AttributeContext,0)


        def relation(self):
            return self.getTypedRuleContext(ObsolescenceParser.RelationContext,0)


        def class_(self):
            return self.getTypedRuleContext(ObsolescenceParser.ClassContext,0)


        def modelSet(self):
            return self.getTypedRuleContext(ObsolescenceParser.ModelSetContext,0)


        def functionSet(self):
            return self.getTypedRuleContext(ObsolescenceParser.FunctionSetContext,0)


        def enumeration(self):
            return self.getTypedRuleContext(ObsolescenceParser.EnumerationContext,0)


        def getRuleIndex(self):
            return ObsolescenceParser.RULE_modelElement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterModelElement" ):
                listener.enterModelElement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitModelElement" ):
                listener.exitModelElement(self)




    def modelElement(self):

        localctx = ObsolescenceParser.ModelElementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_modelElement)
        try:
            self.state = 128
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [24]:
                self.enterOuterAlt(localctx, 1)
                self.state = 122
                self.attribute()
                pass
            elif token in [26]:
                self.enterOuterAlt(localctx, 2)
                self.state = 123
                self.relation()
                pass
            elif token in [27]:
                self.enterOuterAlt(localctx, 3)
                self.state = 124
                self.class_()
                pass
            elif token in [28]:
                self.enterOuterAlt(localctx, 4)
                self.state = 125
                self.modelSet()
                pass
            elif token in [29]:
                self.enterOuterAlt(localctx, 5)
                self.state = 126
                self.functionSet()
                pass
            elif token in [31]:
                self.enterOuterAlt(localctx, 6)
                self.state = 127
                self.enumeration()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AttributeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(ObsolescenceParser.ID)
            else:
                return self.getToken(ObsolescenceParser.ID, i)

        def getRuleIndex(self):
            return ObsolescenceParser.RULE_attribute

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAttribute" ):
                listener.enterAttribute(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAttribute" ):
                listener.exitAttribute(self)




    def attribute(self):

        localctx = ObsolescenceParser.AttributeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_attribute)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self.match(ObsolescenceParser.T__23)
            self.state = 131
            self.match(ObsolescenceParser.ID)
            self.state = 132
            self.match(ObsolescenceParser.T__24)
            self.state = 133
            self.match(ObsolescenceParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RelationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ObsolescenceParser.ID, 0)

        def getRuleIndex(self):
            return ObsolescenceParser.RULE_relation

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRelation" ):
                listener.enterRelation(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRelation" ):
                listener.exitRelation(self)




    def relation(self):

        localctx = ObsolescenceParser.RelationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_relation)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135
            self.match(ObsolescenceParser.T__25)
            self.state = 136
            self.match(ObsolescenceParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ObsolescenceParser.ID, 0)

        def getRuleIndex(self):
            return ObsolescenceParser.RULE_class

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClass" ):
                listener.enterClass(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClass" ):
                listener.exitClass(self)




    def class_(self):

        localctx = ObsolescenceParser.ClassContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_class)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 138
            self.match(ObsolescenceParser.T__26)
            self.state = 139
            self.match(ObsolescenceParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ModelSetContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ObsolescenceParser.ID, 0)

        def getRuleIndex(self):
            return ObsolescenceParser.RULE_modelSet

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterModelSet" ):
                listener.enterModelSet(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitModelSet" ):
                listener.exitModelSet(self)




    def modelSet(self):

        localctx = ObsolescenceParser.ModelSetContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_modelSet)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 141
            self.match(ObsolescenceParser.T__27)
            self.state = 142
            self.match(ObsolescenceParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionSetContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ObsolescenceParser.ID, 0)

        def getRuleIndex(self):
            return ObsolescenceParser.RULE_functionSet

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionSet" ):
                listener.enterFunctionSet(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionSet" ):
                listener.exitFunctionSet(self)




    def functionSet(self):

        localctx = ObsolescenceParser.FunctionSetContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_functionSet)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 144
            self.match(ObsolescenceParser.T__28)
            self.state = 145
            self.match(ObsolescenceParser.ID)
            self.state = 146
            self.match(ObsolescenceParser.T__29)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EnumerationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ObsolescenceParser.ID, 0)

        def getRuleIndex(self):
            return ObsolescenceParser.RULE_enumeration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEnumeration" ):
                listener.enterEnumeration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEnumeration" ):
                listener.exitEnumeration(self)




    def enumeration(self):

        localctx = ObsolescenceParser.EnumerationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 32, self.RULE_enumeration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 148
            self.match(ObsolescenceParser.T__30)
            self.state = 149
            self.match(ObsolescenceParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CriticalityTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ObsolescenceParser.RULE_criticalityType
